Position profile dropdown to prevent undesired visibility

--- a/scss/_sjc-navbar.scss
+++ b/scss/_sjc-navbar.scss
@@ -107,7 +107,7 @@
   }
 
   .profile-dropdown-menu {
-    top: 50px;
+    top: 51px;
   }
 
   .profile-dropdown-menu,
